kubernetes/main_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combined-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "10"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 8000
      - path: /orders/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: orders-service
            port:
              number: 8001
      - path: /product/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: product-service
            port:
              number: 8002
      - path: /tenant/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tenant-service
            port:
              number: 8003
      - path: /wishlist/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: wishlist-service
            port:
              number: 8004
